fix heart on mobile

--- a/components/product/ProductView/ProductView.module.css
+++ b/components/product/ProductView/ProductView.module.css
@@ -40,7 +40,7 @@
     @apply px-6 py-2 pb-4 bg-primary text-primary font-bold inline-block tracking-wide;
   }
 
-  @screen md {
+  @screen lg {
     & .name,
     & .price {
       @apply bg-hover-1 text-white;
@@ -70,5 +70,9 @@
 }
 
 .wishlistButton {
-  @apply absolute right-12 text-white w-10 h-10 flex items-center justify-center bg-violet font-semibold leading-6 cursor-pointer;
+  @apply absolute z-30 top-6 right-12 bg-primary text-base w-10 h-10 flex items-center justify-center font-semibold leading-6 cursor-pointer;
+
+  @screen lg {
+    @apply right-12 text-white bg-violet;
+  }
 }
